<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="id.duakoma.com.meetsquare.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#b7b7b7"
                app:strokeWidth="1dp"/>
            <TextView
                android:id="@+id/card_view_image_title"
                style="@style/Text_Card.Name"
                android:layout_marginLeft="4dp"
                android:text="@string/name_room" />
            <TextView
                android:id="@+id/card_view_image_subtitle"
                style="@style/Text_Card"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:text="@string/subname_room" />
            <View
                android:layout_margin="5dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />
            <TextView
                android:id="@+id/id_desc"
                style="@style/Text_Desc"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/desc_room" />
            <TextView
                android:id="@+id/id_desc_detail"
                style="@style/Text_Desc"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                android:text="@string/desc_room_detail" />
            <View
                android:layout_margin="5dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9" />
            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ScrollView
                    android:id="@+id/verticalScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:id="@+id/tableBiodata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stretchColumns="*">
                    </TableLayout>
                </ScrollView>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/buttonTambahBiodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Booking Ruangan"
        android:textColor="@color/colorWhite"
        android:background="@color/colorFix"/>
</RelativeLayout>