<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="id.duakoma.com.meetsquare.LoginActivity">
    <TextView
        android:id="@+id/text_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text_Card"
        android:textSize="15sp"
        android:textColor="@color/colorFix"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="skip"/>

    <ImageView
        android:id="@+id/text_logo"
        android:layout_below="@+id/text_skip"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rapatkuy"/>
    <TextView
        android:id="@+id/text_slogan"
        android:layout_below="@+id/text_logo"
        android:text="booking ruang meeting dengan mudah"
        android:textColor="@color/colorFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>
    <!-- Login progress -->
    <ProgressBar
        android:layout_below="@+id/text_slogan"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_below="@+id/text_slogan"
        android:id="@+id/login_form"
        android:paddingTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textColor="@color/colorFix"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Text_Edit">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:textColor="@color/colorFix"/>
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Text_Edit">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputEditText>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Sign In"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorFix"/>
</RelativeLayout>
